[package]
name = "gtta"
version = "0.1.0"
edition = "2021"
authors = ["Krzysztof Radecki <krzysztof.radecki@gmail.com>"]
description = "A command line tool to make Gitlab effort entries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.74"
serde_derive = "1.0.133"
derive_more = "0.99.17"
regex = "1.5.4"
clap = { version = "3.0.0", features = ["derive"] }
toml = "0.5.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }